# pydykit

./: .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_mkdocs.txt  sitemap.xml  versions.json
develop/: 404.html  index.html  sitemap.xml
docs/: README.md  about.md  getting_started.md  index.md  postproc.md
getting_started/: index.html
images/: example.tex
latest/: 404.html  index.html  sitemap.xml
paper/: README.md  paper.bib  paper.md
print_page/: index.html
pydykit/: __init__.py  abstract_base_classes.py  base_classes.py  configuration.py  containers.py  core.py  discrete_gradients.py  examples.py  factories.py  function_solvers.py  integrators.py  managers.py  models.py  models_integrators.py  models_simulators.py  models_system.py  models_system_dae.py  models_system_multibody.py  models_system_port_hamiltonian.py  models_time_steppers.py  operators.py  plotters.py  plotting.py  postprocessors.py  results.py  simulators.py  solvers.py  states.py  systems.py  systems_dae.py  systems_multi_body.py  systems_ode.py  systems_port_hamiltonian.py  time_steppers.py  utils.py
pymetis/: __init__.py  core.py  examples.py  integrators.py  solvers.py  states.py  systems.py  time_steppers.py  utils.py
scripts/: s001_run.py  s001_run_pendulum2d.py  s002_interfaces.py  s002_run_pendulum3dcartesian.py  s003_run_pendulum3dcartesian.py  s003_time_stepper.py  s004_matlab_mat_file_to_csv.py  s005_time_stepper_fixed_step_size.py  s005_time_stepper_fixed_stepsize.py  s006_new_metis_content.py  s007_run_rigidbodyrotatingquaternion.py  s008_create_phmbs.py  s009_graphics.py  s009_run_fourparticlesystem.py  s010_graphics.py  s011_run_particle_system.py  s011_run_particlesystem.py  s011_use_postprocessor.py  s012_plot_animation.py  s013_use_postprocessor.py  s014_graphics.py  s015_load_config.py  s016_new_configuration.py  s020_shorten_examples.py  s021_test_new_structure.py  s022_run_lorenz.py  s024_run_reactor.py  s025_run_dissipative_4p_system.py  (+4 more)
(+203 files in other folders)
