[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymetis"
version = "0.0.0"
dependencies = [
  "numpy",
]
requires-python = ">=3.11"
authors = [
  {name = "Phillip L. Kinon"},
  {name = "Julian Karl Bauer", email = "juliankarlbauer@gmx.de"},
]
maintainers = [
  {name = "Phillip L. Kinon"}
]
description = "..."
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[tool.setuptools.package-data]
"pymetis.example_files" = ["*.yml"]
