[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydykit"
version = "0.0.0"
dependencies = [
  "numpy",
  "pandas",
  "plotly",
  "scipy",
  "pyyaml",
  "pydantic",
  "pytest"
]
requires-python = ">=3.11"
authors = [
  {name = "Philipp L. Kinon"},
  {name = "Julian Karl Bauer"},
]
maintainers = [
  {name = "Philipp L. Kinon"},
  {name = "Julian Karl Bauer"},
]
description = "..."
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[tool.setuptools.package-data]
"pydykit.example_files" = ["*.yml"]



[tool.setuptools.packages.find]
include = ["pydykit"]
exclude = [
  "docs*",
  "tests",
  "scripts",
]
namespaces = false
